@@ -17,7 +17,6 @@
  */
 package forge.game.zone;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
 
@@ -186,6 +185,10 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         return c.equals(curResolvingCard);
     }
 
+    public int getUndoStackSize() {
+        return undoStack.size();
+    }
+
     public final boolean canUndo(Player player) {
         return undoStackOwner == player;
     }
@@ -321,14 +324,6 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
             return;
         }
 
-        //cancel auto-pass for all opponents of activating player
-        //when a new non-triggered ability is put on the stack
-        if (!sp.isTrigger()) {
-            for (final Player p : activator.getOpponents()) {
-                p.getController().autoPassCancel();
-            }
-        }
-
         if (sp instanceof AbilityStatic || (sp.isTrigger() && sp.getTrigger().getOverridingAbility() instanceof AbilityStatic)) {
             AbilityUtils.resolve(sp);
             // AbilityStatic should do nothing below
@@ -432,7 +427,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                     }
                 }
             }
-            if (sp.isKeyword(Keyword.STATION) && (source.getType().hasSubtype("Spacecraft") || (source.getType().hasSubtype("Planet")))) {
+            if (sp.isKeyword(Keyword.STATION) && (source.getType().hasSubtype("Spacecraft") || source.getType().hasSubtype("Planet"))) {
                 Iterable<Card> crews = sp.getPaidList("Tapped", true);
                 if (crews != null) {
                     for (Card c : crews) {
@@ -457,11 +452,6 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         // Create a new object, since the triggers aren't happening right away
         List<TargetChoices> chosenTargets = sp.getAllTargetChoices();
         if (!chosenTargets.isEmpty()) {
-            SpellAbility s = sp;
-            if (si != null) {
-                s = si.getSpellAbility();
-                chosenTargets = s.getAllTargetChoices();
-            }
             Set<GameObject> distinctObjects = Sets.newHashSet();
             for (final TargetChoices tc : chosenTargets) {
                 for (final GameObject tgt : tc) {
@@ -472,7 +462,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                     }
 
                     runParams = AbilityKey.newMap();
-                    runParams.put(AbilityKey.SourceSA, s);
+                    runParams.put(AbilityKey.SourceSA, sp);
                     runParams.put(AbilityKey.Target, tgt);
                     if (tgt instanceof Card c) {
                         if (!c.hasBecomeTargetThisTurn()) {
@@ -487,9 +477,9 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                 }
             }
             runParams = AbilityKey.newMap();
-            runParams.put(AbilityKey.SourceSA, s);
+            runParams.put(AbilityKey.SourceSA, sp);
             runParams.put(AbilityKey.Targets, distinctObjects);
-            runParams.put(AbilityKey.Cause, s.getHostCard());
+            runParams.put(AbilityKey.Cause, sp.getHostCard());
             game.getTriggerHandler().runTrigger(TriggerType.BecomesTargetOnce, runParams, false);
         }
 
@@ -1006,7 +996,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
     }
 
     static protected boolean commitCrimeCheck(Player p, Iterable<TargetChoices> chosenTargets) {
-        List<ZoneType> zoneList = ImmutableList.of(ZoneType.Battlefield, ZoneType.Graveyard, ZoneType.Stack);
+        List<ZoneType> zoneList = List.of(ZoneType.Battlefield, ZoneType.Graveyard, ZoneType.Stack);
 
         for (TargetChoices tc : chosenTargets) {
             if (IterableUtil.any(tc.getTargetPlayers(), PlayerPredicates.isOpponentOf(p))) {
