@@ -15,7 +15,6 @@ import forge.util.MyRandom;
 import org.apache.commons.lang3.StringUtils;
 
 import com.badlogic.gdx.utils.Align;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 
 import forge.Forge;
@@ -109,7 +108,7 @@ public class FDeckChooser extends FScreen {
         container.add(deckChooser.lstDecks);
         container.setHeight(FOptionPane.getMaxDisplayObjHeight());
 
-        deckChooser.optionPane = new FOptionPane(null, null, title, null, container, ImmutableList.of(Forge.getLocalizer().getInstance().getMessage("lblOK"), Forge.getLocalizer().getInstance().getMessage("lblCancel")), 0, result -> {
+        deckChooser.optionPane = new FOptionPane(null, null, title, null, container, List.of(Forge.getLocalizer().getInstance().getMessage("lblOK"), Forge.getLocalizer().getInstance().getMessage("lblCancel")), 0, result -> {
             if (result == 0) {
                 if (callback != null) {
                     callback.accept(deckChooser.getDeck());
@@ -1131,8 +1130,8 @@ public class FDeckChooser extends FScreen {
         }
 
         lstDecks.setSelectionSupport(1, maxSelections);
-        lstDecks.setPool(pool);
         lstDecks.setup(config);
+        lstDecks.setPool(pool);
 
         if (config == ItemManagerConfig.STRING_ONLY) {
             //hide edit/view buttons for string-only lists
@@ -1415,7 +1414,12 @@ public class FDeckChooser extends FScreen {
                     NetDeckArchiveBlock = NetDeckArchiveBlock.selectAndLoad(lstDecks.getGameType(), deckType.substring(NetDeckArchiveBlock.PREFIX.length()));
                     return DeckType.NET_ARCHIVE_BLOCK_DECK;
                 }
-                return DeckType.valueOf(deckType);
+                DeckType resolved = DeckType.valueOf(deckType);
+                // TODO: remove when network draft/sealed support is added to mobile.
+                if (resolved == DeckType.NET_EVENT_DECK) {
+                    return selectedDeckType;
+                }
+                return resolved;
             }
         }
         catch (IllegalArgumentException ex) {
